[package]
name = "sop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
solana-program = "=1.14.17"
solana-address-lookup-table-program = "=1.14.17"
winnow = "=0.4.1"
toml_datetime="=0.6.1"
blake3 = "=1.3.1"

# blake3 = "=1.3.1"
# anchor-lang = "0.27.0"
# anchor-spl = "0.27.0"
# getrandom = { version = "0.2.9", features = ["custom"] }
# solana-program = "=1.14.17"
# winnow = "=0.4.1"
# toml_datetime = "=0.6.1"
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }
